--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,25 +9,77 @@
     tools:showIn="@layout/app_bar_main">
 
 
-    <Button
-        android:id="@+id/week_rep"
-        android:layout_width="350sp"
-        android:layout_height="200sp"
-        android:layout_above="@+id/month_rep"
+    <TextView
+        android:id="@+id/editText"
+        android:layout_width="300sp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dp"
-        android:text="@string/weekly_report"
-        android:textSize="24sp" />
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:text="Click the radio buttons to check-in! :)"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/month_rep"
-        android:layout_width="350sp"
-        android:layout_height="200sp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dp"
-        android:text="@string/monthly_report"
-        android:textSize="24sp" />
+    <RadioButton
+        android:id="@+id/radioButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText"
+        android:layout_alignStart="@+id/editText"
+        android:layout_below="@+id/editText"
+        android:layout_marginTop="43dp"
+        android:text="Excellent! XO"
+        android:textColor="#EC7063"
+        android:textStyle="bold" />
 
+    <RadioButton
+        android:id="@+id/radioButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/radioButton"
+        android:layout_alignStart="@+id/radioButton"
+        android:layout_below="@+id/radioButton"
+        android:layout_marginTop="30dp"
+        android:text="Feel good! :)"
+        android:textColor="#3498DB"
+        android:textStyle="bold" />
 
+    <RadioButton
+        android:id="@+id/radioButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/radioButton2"
+        android:layout_alignStart="@+id/radioButton2"
+        android:layout_below="@+id/radioButton2"
+        android:layout_marginTop="27dp"
+        android:text="I am okay..."
+        android:textColor="#F39C12"
+        android:textStyle="bold" />
+
+    <RadioButton
+        android:id="@+id/radioButton4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/radioButton3"
+        android:layout_alignStart="@+id/radioButton3"
+        android:layout_below="@+id/radioButton3"
+        android:layout_marginTop="25dp"
+        android:text="not really good:|"
+        android:textColor="#17A589"
+        android:textStyle="bold" />
+
+    <RadioButton
+        android:id="@+id/radioButton5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/radioButton4"
+        android:layout_alignStart="@+id/radioButton4"
+        android:layout_below="@+id/radioButton4"
+        android:layout_marginTop="30dp"
+        android:text="Feel bad:("
+        android:textAlignment="viewEnd"
+        android:textColor="#34495E  "
+        android:textStyle="bold" />
 </RelativeLayout>
