--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -82,4 +82,14 @@
         android:textAlignment="viewEnd"
         android:textColor="#34495E  "
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/radioButton5"
+        android:layout_alignStart="@+id/radioButton5"
+        android:layout_below="@+id/radioButton5"
+        android:layout_marginTop="26dp"
+        android:text="Record it!" />
 </RelativeLayout>
