--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,75 +21,60 @@
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold" />
-
-    <RadioButton
-        android:id="@+id/radioButton"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
-        android:layout_below="@+id/editText"
-        android:layout_marginTop="43dp"
-        android:text="Excellent! XO"
-        android:textColor="#EC7063"
-        android:textStyle="bold" />
+        android:layout_alignParentBottom="true">
+        <Button
+            android:id="@+id/radioButton"
+            android:layout_width="match_parent"
+            android:layout_height="70sp"
+            android:text="Excellent! XO"
+            android:layout_marginBottom="280sp"
+            android:background="#EC7063"
+            android:textColor="#FDFEFE"
+            android:textStyle="bold" />
+ <       <Button
+            android:id="@+id/radioButton2"
+            android:layout_width="match_parent"
+            android:layout_height="70sp"
+            android:layout_marginTop="70sp"
+            android:text="Feel good! :)"
+            android:background="#3498DB"
+            android:textColor="#FDFEFE"
+            android:textStyle="bold" />
 
-    <RadioButton
-        android:id="@+id/radioButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/radioButton"
-        android:layout_alignStart="@+id/radioButton"
-        android:layout_below="@+id/radioButton"
-        android:layout_marginTop="30dp"
-        android:text="Feel good! :)"
-        android:textColor="#3498DB"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/radioButton3"
+            android:layout_width="match_parent"
+            android:layout_height="70sp"
+            android:layout_marginTop="140sp"
+            android:text="I am okay..."
+            android:background="#F39C12"
+            android:textColor="#FDFEFE"
+            android:textStyle="bold" />
 
-    <RadioButton
-        android:id="@+id/radioButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/radioButton2"
-        android:layout_alignStart="@+id/radioButton2"
-        android:layout_below="@+id/radioButton2"
-        android:layout_marginTop="27dp"
-        android:text="I am okay..."
-        android:textColor="#F39C12"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/radioButton4"
+            android:layout_width="match_parent"
+            android:layout_height="70sp"
+            android:layout_marginTop="210sp"
+            android:text="not really good:|"
+            android:background="#17A589"
+            android:textColor="#FDFEFE"
+            android:textStyle="bold" />
 
-    <RadioButton
-        android:id="@+id/radioButton4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/radioButton3"
-        android:layout_alignStart="@+id/radioButton3"
-        android:layout_below="@+id/radioButton3"
-        android:layout_marginTop="25dp"
-        android:text="not really good:|"
-        android:textColor="#17A589"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/radioButton5"
+            android:layout_width="match_parent"
+            android:layout_height="70sp"
+            android:layout_marginTop="280sp"
+            android:text="Feel bad:("
+            android:textAlignment="center"
+            android:background="#34495E"
+            android:textColor="#FDFEFE"
+            android:textStyle="bold" />-->
+    </FrameLayout>
 
-    <RadioButton
-        android:id="@+id/radioButton5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/radioButton4"
-        android:layout_alignStart="@+id/radioButton4"
-        android:layout_below="@+id/radioButton4"
-        android:layout_marginTop="30dp"
-        android:text="Feel bad:("
-        android:textAlignment="viewEnd"
-        android:textColor="#34495E  "
-        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/radioButton5"
-        android:layout_alignStart="@+id/radioButton5"
-        android:layout_below="@+id/radioButton5"
-        android:layout_marginTop="26dp"
-        android:text="Record it!" />
 </RelativeLayout>
