--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,9 +17,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:text="Click the radio buttons to check-in! :)"
+        android:text="Click the buttons to check-in! :)"
         android:textColor="#000000"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
     <FrameLayout
         android:layout_width="match_parent"
